# fomo-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot_client.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yaml  test.yaml
src/: bootstrap.py  bot_client.py  google_vertex.py  main.py  summarize.py  translator.py
src/user_tracking/: __init__.py  pinned_message_emoji_tracker.py  role_based_tracker.py  tracking_manager.py  tracking_strategy.py  user_tracking_manager.py  user_tracking_strategy.py  whitelist_emoji_tracker.py
